[project]
name = "tiktok-tg-bot"
version = "0.1.0"
description = "Telegram bot that reposts watermark-free TikTok videos and watches profiles for new ones"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
    "yt-dlp>=2024.12.6",
    "pydantic-settings>=2.5",
]

[project.scripts]
ttbot = "ttbot.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttbot"]
