[project]
name = "sshpioner-tg-bot"
version = "0.2.0"
description = "Telegram bot that downloads media from TikTok, Instagram and YouTube, and watches TikTok profiles for new posts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "httpx[socks]>=0.27",
    "yt-dlp>=2024.12.6",
    "pydantic-settings>=2.5",
]

[project.scripts]
ttbot = "ttbot.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttbot"]
